<?xml version="1.0"?>

<package format="2">
  <name> raspberry_pi_driver </name>
  <version> 0.0.1 </version>
  <description>
    hogehoge
  </description>


  <maintainer email="httperror@404-notfound.jp">
    Yamasaki Tatsuya
  </maintainer>

  <license> MIT </license>

  <buildtool_depend> catkin </buildtool_depend>

  <depend> roscpp        </depend>
  <depend> geometry_msgs </depend>
  <depend> nav_msgs      </depend>
</package>
